<resources>
    <string name="app_name">실시간검색(Real Ranking)</string>
    <string name="notification_name">알람 단어 등록</string>
    <string name="check_network_toast">인터넷이 연결 되지 않았습니다. 연결 후 다시 시도해주세요</string>
    <string name="add_rank_text_hint">단어가 실시간 검색에 오르면 알람이 옵니다</string>
    <string name="ranking_text_show">실시간 검색어에 등록되었습니다.</string>
    <string name="ranking_text_push">눌러서 확인하세요</string>
    <string name="dialog_text">잠시만 기다려 주세요...</string>
    <string name="empty_list">인터넷 연결이 불안합니다. 앱을 닫고 다시 열어주세요</string>
    <string name="widget_config_interval">업데이트 주기</string>
    <string name="widget_config_disturb">방해금지</string>
    <string name="widget_config_sleep">화면꺼짐 중에 업데이트</string>
    <string name="start_hour">시작시간</string>
    <string name="end_hour">종료시간</string>
    <string name="alreadyExist">위젯은 하나만 만들 수 있습니다</string>
    <string name="widget_config">위젯 설정</string>

    <string name="time" translatable="false">Last updated : %1$s</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8039042765632689/8024420055</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-8039042765632689~6547686855</string>
</resources>
